# COPE

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  install.sh
Meta/: build_image.sh  prepare_idf_environment.sh  run_tests.sh
components/datastructures/include/: vector.h
components/datastructures/test/: test_datastructures.cpp
configs/: ab_magnus_cfg.toml  ack_test_cfg.toml  alice_bob_cfg.toml  lab_34_36_45.toml  live_demo.toml  max_throughput.toml
cope/: Cargo.toml  build.rs  default_cfg.toml
cope/cope_config/: Cargo.toml
cope/cope_config/src/: config.rs  file_generator.rs  file_generator.rsK:w  lib.rs  node_id.rs
cope/cope_config/src/types/: mac_address.rs  mod.rs  node_id.rs  traffic_generator_type.rs
cope/src/: channel.rs  config.rs  lib.rs  node.rs  packet.rs  stats.rs  topology.rs  traffic_generator.rs
cope/src/benchmark/: mod.rs
cope/src/coding/: decode_util.rs  leaf_node_coding.rs  mod.rs  relay_node_coding.rs  retrans_queue.rs
cope/src/kbase/: mod.rs  simple_kbase.rs
cope/src/packet/: ack.rs  mod.rs  packet.rs  packet_data.rs
cope/src/packet_pool/: mod.rs  simple_packet_pool.rs
cope/src/traffic_generator/: data_generator.rs  greedy_generator.rs  greedy_strategy.rs  mod.rs  none_generator.rs  none_strategy.rs  pareto_generator.rs  periodic_strategy.rs  poisson_generator.rs  poisson_strategy.rs  random_generator.rs  random_strategy.rs  size_distribution.rs  timed_generator.rs
cope/src/util/: logger.rs
esp/: .gitignore  Cargo.toml  README.md
esp/.cargo/: config.toml
esp/Meta/: collect_statistics.sh  install_lab_dependencies.sh  run_tests.sh
esp/src/: esp_channel.rs  esp_stats_logger.rs  espnow_frame.rs  espnow_stats.rs  espressif_wifi_frame.rs  frame_collection.rs  main.rs  packet.rs  promiscuous_wifi.rs  test_runner.rs  wifi_frame.rs
logs/coding_gain/coding_1kB/: config.toml  log_A  log_B  log_C  log_esp_48:27:E2:3B:30:58  log_esp_48:27:E2:3B:31:04  log_esp_48:27:E2:3B:33:44
logs/coding_gain/coding_2kB/: config.toml  log_A  log_B  log_C  log_esp_48:27:E2:3B:30:58  log_esp_48:27:E2:3B:31:04  log_esp_48:27:E2:3B:33:44
logs/coding_gain/coding_5kB/: config.toml  log_A  log_B  log_C  log_esp_48:27:E2:3B:30:58  log_esp_48:27:E2:3B:31:04  log_esp_48:27:E2:3B:33:44
logs/coding_gain/coding_9kB/: config.toml  log_A  log_B  log_C  log_esp_48:27:E2:3B:30:58  log_esp_48:27:E2:3B:31:04  log_esp_48:27:E2:3B:33:44
logs/coding_gain/nocoding_1kB/: config.toml  log_A  log_B  log_C  log_esp_48:27:E2:3B:30:58  log_esp_48:27:E2:3B:31:04  log_esp_48:27:E2:3B:33:44
logs/coding_gain/nocoding_2kB/: config.toml  log_A  log_B  log_C  log_esp_48:27:E2:3B:30:58  log_esp_48:27:E2:3B:31:04  log_esp_48:27:E2:3B:33:44
logs/coding_gain/nocoding_5kB/: config.toml  log_A  log_B  log_C  (+3 more)
logs/raw_throughput_1Mbit/: log_esp_48:27:E2:3B:30:58  log_esp_48:27:E2:3B:31:04
plot_script/: data_reader.py  data_throuput.py  data_throuput_sub.py  main.py  plot_config.py  plotter.py  print_all_files.py
project_report/: ccs-thesis.cls  report.tex
simulator/: .gdbinit  .gitignore  Cargo.toml
simulator/log/: log_A.csv  log_B.csv  log_C.csv
simulator/src/: esp.rs  firewall.rs  main.rs  node.rs  simulator_channel.rs  simulator_stats_logger.rs
src/: main.rs
test/: CMakeLists.txt
test/main/: CMakeLists.txt  test_runner.c
(+7 files in other folders)
