[package]
name = "cope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "cope_config"
]

[dependencies]
bitvec = { version = "1.0.1", features = ["serde"] }
bincode = { version = "1.3.3" }
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
serde = { version = "1.0.192", features = ["derive"] }
cope_config = { path = "cope_config"}
chrono = "0.4.31"
colored = "2.0.4"

[build-dependencies]
serde = { version = "1.0.0", features = ["derive"] }
toml = { version = "0.8.8" }
cope_config = { path = "cope_config"}
