[package]
name = "cope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["cope_config"]

[dependencies]
log = { version = "0.4", default-features = false }
simple_logger = { version = "4.3.0" }
bitvec = { version = "1.0.1", features = ["serde"] }
bincode = { version = "1.3.3" }
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
serde = { version = "1.0.192", features = ["derive"] }
cope_config = { path = "cope_config" }

[build-dependencies]
parse_duration = { version = "2.1.1" }
serde = { version = "1.0.0", features = ["derive"] }
toml = { version = "0.8.8" }
cope_config = { path = "cope_config" }
