[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cope = { path = "../cope" }
log = { version = "0.4", default-features = false }
simple_logger = { version = "4.3.0" }
anyhow = { version = "1.0.75" }
rand = "0.8.5"
